--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/portfolio/favicon.png">
-    <!-- CSS 
+    <!-- CSS     
     ============================================ -->
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/vendor/slick.css">
@@ -24,14 +24,14 @@
 <body class="template-color-1 spybody white-version" data-spy="scroll" data-target=".navbar-example2" data-offset="150">
 
     <!-- Start Header -->
-    <header class="rn-header haeder-default black-logo-version header--fixed header--sticky">
-        <div class="header-wrapper rn-popup-mobile-menu m--0 row align-items-center">
+    <header class="rn-header haeder-default black-logo-version header--fixed header--sticky" >
+        <div class="header-wrapper rn-popup-mobile-menu m--0 row align-items-center" style="scale: 0.9;">
             <!-- Start Header Left -->
             <div class="col-lg-2 col-6">
                 <div class="header-left">
                     <div class="logo">
                         <a href="index.html">
-                            <img src="assets/images/logo/navLogo.png" alt="logo">
+                            <img src="assets/images/logo/navLogo.png" style="scale: 1.1;"  alt="logo">
                         </a>
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                 <div class="header-center">
                     <nav id="sideNav" class="mainmenu-nav navbar-example2 d-none d-xl-block onepagenav">
                         <!-- Start Mainmanu Nav -->
-                        <ul class="primary-menu nav nav-pills">
+                        <ul class="primary-menu nav nav-pills" style="font-size: 18px;">
                             <li class="nav-item current"><a class="nav-link" href="#home">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
                             <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
@@ -54,19 +54,6 @@
                         <!-- End Mainmanu Nav -->
                     </nav>
                     <!-- Start Header Right  -->
-                    <div class="header-right">
-                        <a class="rn-btn" target="_blank"
-                            href="https://themeforest.net/checkout/from_item/33188244?license=regular"><span>BUY
-                                NOW</span></a>
-                        <div class="hamberger-menu d-block d-xl-none">
-                            <i id="menuBtn" class="feather-menu humberger-menu"></i>
-                        </div>
-                        <div class="close-menu d-block">
-                            <span class="closeTrigger">
-                                <i data-feather="x"></i>
-                            </span>
-                        </div>
-                    </div>
                     <!-- End Header Right  -->
 
                 </div>
@@ -87,7 +74,7 @@
                         <button class="close-menu-activation close"><i data-feather="x"></i></button>
                     </div>
                 </div>
-                <p class="discription">Inbio is a personal portfolio template. You can customize all.</p>
+                <p class="discription"></p>
             </div>
             <div class="content">
                 <ul class="primary-menu nav nav-pills onepagenav">
@@ -143,7 +130,7 @@
 
         <!-- Start Slider Area -->
         <div id="home" class="rn-slider-area">
-            <div class="slide slider-style-1">
+            <div class="slide slider-style-1" style="scale: 0.9;">
                 <div class="container">
                     <div class="row row--30 align-items-center">
                         <div class="order-2 order-lg-1 col-lg-7 mt_md--50 mt_sm--50 mt_lg--30">
@@ -196,7 +183,7 @@
                                             <span class="title">best skill on</span>
                                             <ul class="skill-share d-flex liststyle">
                                                 <li class=""><img src="assets/images/icons/icons8-react.gif"
-                                                        alt="Icons Images">
+                                                        alt="Icons Images" >
                                                 </li>
                                                 <li><img src="assets/images/icons/icons8-figma.gif" alt="Icons Images">
                                                 </li>
@@ -223,7 +210,7 @@
         <!-- End Slider Area -->
 
         <!-- Start Service Area -->
-        <div class="rn-service-area rn-section-gap section-separator" id="features">
+        <div class="rn-service-area rn-section-gap section-separator" style="scale: 0.9;" id="features">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -363,7 +350,7 @@
         <!-- End Service Area  -->
 
         <!-- Start Portfolio Area -->
-        <div class="rn-portfolio-area rn-section-gap section-separator" id="portfolio">
+        <div class="rn-portfolio-area rn-section-gap section-separator" style="scale: 0.9;"  id="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -555,7 +542,7 @@
         <!-- End portfolio Area -->
 
         <!-- Start Resume Area -->
-        <div class="rn-resume-area rn-section-gap section-separator" id="resume">
+        <div class="rn-resume-area rn-section-gap section-separator" style="scale: 0.9;"  id="resume">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -986,7 +973,7 @@
         <!-- End Resume Area -->
 
         <!-- Start Testimonia Area  -->
-        <div class="rn-testimonial-area rn-section-gap section-separator" id="testimonial">
+        <div class="rn-testimonial-area rn-section-gap section-separator" style="scale: 0.9;"  id="testimonial">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -1204,7 +1191,7 @@
       
 
         <!-- Pricing Area -->
-        <div class="rn-pricing-area rn-section-gap section-separator" id="pricing">
+        <div class="rn-pricing-area rn-section-gap section-separator" style="scale: 0.9;"  id="pricing">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-xl-5 mb_md--40 mb_sm--40 small-margin-pricing">
@@ -1524,7 +1511,7 @@
         </div>
         <!-- pricing area -->
         <!-- Start News Area -->
-        <div class="rn-blog-area rn-section-gap section-separator" id="blog">
+        <div class="rn-blog-area rn-section-gap section-separator" style="scale: 0.9;"  id="blog">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -1623,7 +1610,7 @@
         </div>
         <!-- ENd Mews Area -->
         <!-- Start Contact section -->
-        <div class="rn-contact-area rn-section-gap section-separator" id="contacts">
+        <div class="rn-contact-area rn-section-gap section-separator" style="scale: 0.9;"  id="contacts">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -1635,32 +1622,6 @@
                 </div>
 
                 <div class="row mt--50 mt_md--40 mt_sm--40 mt-contact-sm">
-                    <div class="col-lg-5">
-                        <div class="contact-about-area">
-                            <div class="thumbnail">
-                                <img src="assets/images/contact/contact1.png" alt="contact-img">
-                            </div>
-                            <div class="title-area">
-                                <h4 class="title">Aditya Mathur</h4>
-                                <span>Developer & Graphic Designer</span>
-                            </div>
-                            <div class="description">
-                                <p>I am available for freelance work. Connect with me via and call in to my account.
-                                </p>
-                                <span class="phone">Phone: <a href="tel:7834881186">+91 783-4881-186</a></span>
-                                <span class="mail">Email: <a
-                                        href="mailto:adiasfreelancer@gmail.com">adiasfreelancer@gmail.com</a></span>
-                            </div>
-                            <div class="social-area">
-                                <div class="name">FIND WITH ME</div>
-                                <div class="social-icone">
-                                    <a href="https://github.com/Aditya2Mathur/" target="_blank"><i data-feather="github"></i></a>
-                                    <a href="https://www.linkedin.com/in/aditya-mathur-0ab081281/" target="_blank"><i data-feather="linkedin" ></i></a>
-                                    <a href="https://www.instagram.com/code_assaulter/" target="_blank"><i data-feather="instagram" ></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div data-aos-delay="600" class="col-lg-7 contact-input">
                         <div class="contact-form-wrapper">
                             <div class="introduce">
@@ -1718,6 +1679,33 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-5">
+                        <div class="contact-about-area">
+                            <div class="thumbnail">
+                                <img src="assets/images/contact/contact.jpg" alt="contact-img">
+                            </div>
+                            <div class="title-area">
+                                <h4 class="title">Aditya Mathur</h4>
+                                <span>Developer & Graphic Designer</span>
+                            </div>
+                            <div class="description">
+                                <p>I am available for freelance work. Connect with me via and call in to my account.
+                                </p>
+                                <span class="phone">Phone: <a href="tel:7834881186">+91 783-4881-186</a></span>
+                                <span class="mail">Email: <a
+                                        href="mailto:adiasfreelancer@gmail.com">adiasfreelancer@gmail.com</a></span>
+                            </div>
+                            <div class="social-area">
+                                <div class="name">FIND WITH ME</div>
+                                <div class="social-icone">
+                                    <a href="https://github.com/Aditya2Mathur/" target="_blank"><i data-feather="github"></i></a>
+                                    <a href="https://www.linkedin.com/in/aditya-mathur-0ab081281/" target="_blank"><i data-feather="linkedin" ></i></a>
+                                    <a href="https://www.instagram.com/code_assaulter/" target="_blank"><i data-feather="instagram" ></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
