--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
                             <div class="position-sticky sticky-top rbt-sticky-top-adjust">
                                 <div class="section-title text-left">
                                     <span class="subtitle text-center text-lg-left">Pricing</span>
-                                    <h2 class="title text-center text-lg-left">My Pricing</h2>
+                                    <h2 class="title text-center text-lg-left">Friendly Pricing</h2>
                                 </div>
                             </div>
                         </div>
@@ -1239,14 +1239,13 @@
                                     <div class="rn-pricing">
                                         <div class="pricing-header">
                                             <div class="header-left">
-                                                <h2 class="title">Make Your Single Page</h2>
-                                                <span>Elementor</span>
+                                                <h2 class="title">Static Web Development</h2>
+                                                <span>Develop</span>
                                             </div>
                                         </div>
                                         <div class="pricing-body">
                                             <p class="description">
-                                                All the Lorem Ipsum generators on the Internet tend to repeat predefined
-                                                chunks as necessary
+                                                "Affordable Web Development Static: Start Your Online Journey Today"
                                             </p>
                                             <div class="check-wrapper">
                                                 <div class="left-area">
@@ -1303,21 +1302,20 @@
                                     <div class="rn-pricing">
                                         <div class="pricing-header">
                                             <div class="header-left">
-                                                <h2 class="title">Design Make this Page</h2>
-                                                <span>Elementor</span>
+                                                <h2 class="title">Standard Web Development</h2>
+                                                <span>Develop</span>
                                             </div>
                                            
                                         </div>
                                         <div class="pricing-body">
                                             <p class="description">
-                                                Making this the first true generator on the Internet. It uses a
-                                                dictionary & plugin Development.
+                                                "Get your dream website at budget-friendly rates"
                                             </p>
                                             <div class="check-wrapper">
                                                 <div class="left-area">
                                                     <div class="check d-flex">
                                                         <i data-feather="check"></i>
-                                                        <p>1 Page with Elementor</p>
+                                                        <p>1 Page with Develop</p>
                                                     </div>
                                                     <div class="check d-flex">
                                                         <i data-feather="check"></i>
@@ -1387,15 +1385,14 @@
                                     <div class="rn-pricing">
                                         <div class="pricing-header">
                                             <div class="header-left">
-                                                <h2 class="title">Customize Your Single Page</h2>
-                                                <span>Elementor</span>
+                                                <h2 class="title">Premium Web Development</h2>
+                                                <span>Develop</span>
                                             </div>
                                            
                                         </div>
                                         <div class="pricing-body">
                                             <p class="description">
-                                                I will install your desire theme and made like Theme demo and customize
-                                                your all page.
+                                                "Elevate Your Online Presence with Dynamic Web Development"
                                             </p>
                                             <div class="check-wrapper">
                                                 <div class="left-area">
@@ -1464,7 +1461,7 @@
                                                 </div>
                                                 <div class="single-cmt d-flex">
                                                     <i data-feather="activity"></i>
-                                                    <span>10 Days Revision</span>
+                                                    <span>30 Days Revision</span>
                                                 </div>
                                             </div>
                                         </div>
