--- a/index.html
+++ b/index.html
@@ -1181,8 +1181,8 @@
                             class="d-block d-lg-flex text-center d-lg-left section-flex flex-wrap align-content-start h-100">
                             <div class="position-sticky sticky-top rbt-sticky-top-adjust">
                                 <div class="section-title text-left">
-                                    <span class="subtitle text-center text-lg-left">Pricing</span>
-                                    <h2 class="title text-center text-lg-left">Friendly Pricing</h2>
+                                    <span class="subtitle text-center text-lg-left">Services</span>
+                                    <h2 class="title text-center text-lg-left">Friendly Services</h2>
                                 </div>
                             </div>
                         </div>
