--- a/index.html
+++ b/index.html
@@ -1525,7 +1525,7 @@
                     <div class="col-lg-5">
                         <div class="contact-about-area">
                             <div class="thumbnail">
-                                <img src="assets/images/contact/contact1.png" alt="contact-img">
+                                <img src="assets/images/contact/contact.jpg" alt="contact-img">
                             </div>
                             <div class="title-area">
                                 <h4 class="title">Aditya Mathur</h4>
