changing in SEO

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Aditya Kumar</title>
     <meta name="robots" content="noindex, follow" />
-    <meta name="description" content="">
+    <meta name="description" content="Elevating Digital Experiences: Mastering HTML, CSS, Tailwind & Javascript, NodeJS, and ReactJS">
+    <meta name="keywords"
+    content="web developer in noida,web developer in farrukhabad,web developer in Shahajahanpur, aditya mathur developer,aditya mathur portfolio ,software developer in noida,
+    software developer in noida,web developer in farrukhabad, web developer in Shahajahanpur" >
+   
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/portfolio/favicon.png">
