anurag mathur picture

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Aditya Kumar</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="Elevating Digital Experiences: Mastering HTML, CSS, Tailwind & Javascript, NodeJS, and ReactJS">
-    <meta name="keywords"
-    content="web developer in noida,web developer in farrukhabad,web developer in Shahajahanpur, aditya mathur developer,aditya mathur portfolio ,software developer in noida,
-    software developer in noida,web developer in farrukhabad, web developer in Shahajahanpur" >
+    <meta name="keywords" content="web developer in noida, web developer in farrukhabad,web developer in Shahajahanpur, aditya mathur developer,aditya mathur portfolio ,software developer in noida,
+    web developer in farrukhabad,  developer in Shahajahanpur" >
    
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
@@ -22,8 +21,8 @@
     <link rel="stylesheet" href="assets/css/vendor/aos.css">
     <link rel="stylesheet" href="assets/css/plugins/feature.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Style css -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/main.css">
@@ -69,6 +68,7 @@
             <!-- End Header Center -->
         </div>
     </header>
+    
     <!-- End Header Section -->
     <!-- Start Popup Mobile Menu  -->
     <div class="popup-mobile-menu">
@@ -1083,7 +1083,7 @@
                                 <div class="inner">
                                     <div class="card-info">
                                         <div class="card-thumbnail">
-                                            <img src="assets/images/testimonial/final-home--4th.png"
+                                            <img src="assets/images/testimonial/anuragMathur.jpg"
                                                 alt="Testimonial-image">
                                         </div>
                                         <div class="card-content">
