--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Aditya Kumar</title>
+    <title>Aditya Mathur - Programmer & Graphic Designer</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="Elevating Digital Experiences: Mastering HTML, CSS, Tailwind & Javascript, NodeJS, and ReactJS">
-    <meta name="keywords" content="web developer in noida, web developer in farrukhabad,web developer in Shahajahanpur, aditya mathur developer,aditya mathur portfolio ,software developer in noida,
+    <meta name="keywords" content="web developer in noida, web developer in farrukhabad,web developer in Shahajahanpur, aditya mathur web developer,aditya mathur portfolio ,software developer in noida,
     web developer in farrukhabad,  developer in Shahajahanpur" >
    
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
